RequestBody annotation for body params updated
