# bilemo_api_project/public/swagger/swagger.json
@@ -241,26 +241,27 @@
                     "Security"
                 ],
                 "operationId": "App\\Controller\\SecurityController::login",
-                "parameters": [
-                    {
-                        "name": "username",
-                        "in": "query",
-                        "description": "customer username",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "password",
-                        "in": "query",
-                        "description": "customer password",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "username": {
+                                        "description": "",
+                                        "type": "string",
+                                        "example": ""
+                                    },
+                                    "password": {
+                                        "description": "",
+                                        "type": "string",
+                                        "example": ""
+                                    }
+                                },
+                                "type": "object"
+                            }
                         }
                     }
-                ],
+                },
                 "responses": {
                     "204": {
                         "description": "Authentication success"
